--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width:1140px;
+    margin: 0 auto;
+}
+
 p, li{
     font-family: "Roboto", sans-serif;
     font-size: 16px;
@@ -9,6 +19,10 @@ p, li{
     
 }
 
+li{
+    list-style: none;
+}
+
 .index-banner-heading {
     font-family: "Roboto", sans-serif;
     font-size: 64px;
@@ -18,6 +32,8 @@ p, li{
     letter-spacing: 0.04em;
        
     color: #1F3F68;
+
+    width:510px;
 }
 
 .services-heading {
@@ -113,3 +129,47 @@ p, li{
     background: #5A98D0;
     color:#fff;
 }
+
+.nav-bar{
+    display: flex;
+}
+.nav-item{
+    padding: 0 10px;
+}
+
+.product-box{
+    width: 359px;
+}
+
+.products-group{
+    display: flex;
+    justify-content:space-around;
+}
+
+.footer-banner-text{
+    width: 495px;
+}
+.footer-heading{
+    width: 340px;
+}
+
+.footer-contacts{
+    display: flex;
+    justify-content: space-around;
+}
+
+.contacts-content{
+    display: flex;
+    justify-content: space-around;
+}
+
+.contacts-item{
+    width: 70%;
+}
+
+.footer-banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
