--- a/css/main.css
+++ b/css/main.css
@@ -3,15 +3,22 @@
     padding: 0;
 }
 
+body{
+    font-family: sans-serif;
+}
+
 .container {
     width:1140px;
     margin: 0 auto;
 }
 
-p, li{
-    font-family: "Roboto", sans-serif;
+.wrapper-top{
+    height: 768px;
+    background: linear-gradient(0deg, #EBF3FB 8.84%, rgba(152, 195, 232, 0) 31.12%);
+}
+
+p{
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
     line-height: 26px;
     letter-spacing: 0.05em;
@@ -19,27 +26,63 @@ p, li{
     
 }
 
-li{
-    list-style: none;
+.top-content{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.index-banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .index-banner-heading {
-    font-family: "Roboto", sans-serif;
     font-size: 64px;
-    font-style: normal;
     font-weight: 300;
     line-height: 74px;
     letter-spacing: 0.04em;
-       
-    color: #1F3F68;
-
     width:510px;
+    color: #1F3F68;
+    margin-bottom: 32px;
 }
 
+.index-banner-text{
+    
+    padding-top: 115px; 
+    flex-grow: 1;
+    background-image: url(../img/banner.png);
+    background-repeat: no-repeat;
+    background-position: right center;
+}
+
+.index-banner-text-p{
+    line-height: 26px;
+    letter-spacing: 0.05em;
+    width: 425px;
+
+}
+
+.top-button{
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    background: #5A98D0;
+    box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+    border-radius: 10px;
+    padding:15px 50px;
+    text-decoration: none;
+    display:inline-block;
+    margin-top:71px;
+}
+
+
 .services-heading {
-    font-family: "Roboto", sans-serif;
+    
     font-size: 36px;
-    font-style: normal;
     font-weight: 300;
     line-height: 46px;
     letter-spacing: 0.05em;
@@ -47,9 +90,7 @@ li{
 }
 
 .footer-heading{
-    font-family: "Roboto", sans-serif;
     font-size: 36px;
-    font-style: normal;
     font-weight: 400;
     line-height: 46px;
     letter-spacing: 0.05em;
@@ -57,9 +98,7 @@ li{
 }
 
 .contacts-banner-heading{
-    font-family: "Roboto", sans-serif;
     font-size: 44px;
-    font-style: normal;
     font-weight: 500;
     line-height: 74px;
     letter-spacing: 0.04em;
@@ -68,9 +107,7 @@ li{
 }
 
 .product-heading{
-    font-family: "Roboto", sans-serif;
     font-size: 20px;
-    font-style: normal;
     font-weight: 400;
     line-height: 30px;
     letter-spacing: 0.05em;
@@ -79,9 +116,7 @@ li{
 }
 
 .contacts-item-heading {
-    font-family: "Roboto", sans-serif;
     font-size: 20px;
-    font-style: normal;
     font-weight: 500;
     line-height: 30px;
     letter-spacing: 0.04em;
@@ -91,10 +126,13 @@ li{
     text-transform: uppercase;   
 }
 
+.send-us{
+    box-shadow: 0 0 10px 5px rgb(221 221 221);
+    border-radius: 10px;
+    padding: 10px;
+}
 .send-us-form{
-    font-family: "Roboto", sans-serif;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
     line-height: 30px;
     letter-spacing: 0.04em;
@@ -110,6 +148,9 @@ li{
     padding:16px;
 }
 
+.textarea{
+    resize: none;
+}
 
 .send-us-form-btn
 {
@@ -132,6 +173,9 @@ li{
 
 .nav-bar{
     display: flex;
+    list-style: none;
+    justify-content: space-between;
+    padding-top: 42px;
 }
 .nav-item{
     padding: 0 10px;
