--- a/css/main.css
+++ b/css/main.css
@@ -244,10 +244,6 @@ p{
 
 }
 
-.projects{
-    padding-bottom: 112px;
-}
-
 .project-img{
  width:100%;
 }
@@ -285,14 +281,17 @@ p{
 .footer{
     background: #316099;
     color:#ffffff;
+    margin-top:120px;
+    padding:65px 0;
+
 }
 
 .footer-banner{
+    padding-bottom: 95px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height:367px; /*  */
-    
+
 }
 
 .footer-heading {
@@ -308,8 +307,10 @@ p{
     letter-spacing: 0.05em;
     color:#ffffff;
     padding-top: 32px;
-    /* padding-bottom: 95px; */
+    
+  
 }
+
 
 .footer-button{
     padding: 15px 80px;
@@ -332,22 +333,32 @@ p{
 
 .footer-contacts{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin-top:64px;
+}
+.footer-contact{
     list-style: none;
     line-height: 26px;
     letter-spacing: 0.05em;
-    padding: 64px 0;
+    margin-right: 32px; 
+    flex-grow: 1;
+    flex-basis: 33.3333%;
+    display: flex;
+}
+
+.footer-contact:first-child::before{
+    content: 'A.';
+    display: block;
+    margin-right: 16px;
+    
+
 }
 
 .copyright {
     line-height: 26px;
     letter-spacing: 0.05em;
     color: #ffffff;
-    padding-bottom: 64px;
-}
-
-.footer-bottom{
-    height: 231px;
+    margin-top: 64px;
     
 }
 
