--- a/css/main.css
+++ b/css/main.css
@@ -129,54 +129,6 @@ p {
   text-decoration: none;
 }
 
-.contacts-item-heading {
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 30px;
-  letter-spacing: 0.04em;
-  color: #1F3F68;
-  text-transform: uppercase;
-}
-
-.send-us {
-  -webkit-box-shadow: 0 0 10px 5px #dddddd;
-          box-shadow: 0 0 10px 5px #dddddd;
-  border-radius: 10px;
-  padding: 10px;
-}
-
-.send-us-form {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 30px;
-  letter-spacing: 0.04em;
-}
-
-.send-us-form-items {
-  width: 428px;
-  opacity: 0.4;
-  border: 1px solid #356EAD;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 10px;
-  padding: 16px;
-}
-
-.textarea {
-  resize: none;
-}
-
-.send-us-form-btn {
-  width: 428px;
-  height: 72px;
-  background: #5A98D0;
-  -webkit-box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
-          box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
-  border-radius: 10px;
-  text-transform: uppercase;
-  color: #fff;
-}
-
 .footer-btn {
   width: 236.63px;
   height: 56px;
@@ -286,18 +238,6 @@ p {
   top: 32px;
   font-size: 28px;
   left: 32px;
-}
-
-.contacts-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.contacts-item {
-  width: 70%;
 }
 
 .footer {
@@ -583,5 +523,146 @@ p {
   letter-spacing: 0.04em;
   color: rgba(255, 255, 255, 0.6);
   text-align: center;
+}
+
+.contacts-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-height: 800px;
+  margin-bottom: 72px;
+}
+
+.contacts-content .contacts {
+  max-width: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 56px 0;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.contacts-content .contacts .contacts-item {
+  list-style-position: inside;
+}
+
+.contacts-content .contacts .contacts-item .contacts-item-heading {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.04em;
+  color: #1F3F68;
+  text-transform: uppercase;
+  margin-bottom: 24px;
+}
+
+.contacts-content .contacts .contacts-item .contacts-item-text {
+  font-weight: 300;
+  line-height: 26px;
+  letter-spacing: 0.04em;
+  color: #1F3F68;
+}
+
+.contacts-content .contacts .contacts-item .contacts-item-phone-li {
+  list-style-image: url(../img/phone_icon.svg);
+  margin-bottom: 16px;
+}
+
+.contacts-content .contacts .contacts-item .contacts-item-www-li {
+  list-style-image: url(../img/www-icon.svg);
+  margin-bottom: 16px;
+}
+
+.contacts-content .contacts .contacts-item .contacts-item-email-li {
+  list-style-image: url(../img/email-icon.svg);
+}
+
+.contacts-content .send-us {
+  background: #FFFFFF;
+  -webkit-box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
+          box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
+  border-radius: 10px;
+  padding: 56px;
+  max-width: 540px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contacts-content .send-us .send-us-heading {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.04em;
+  color: #1F3F68;
+  text-transform: uppercase;
+  margin-bottom: 48px;
+}
+
+.contacts-content .send-us .input-caption {
+  line-height: 30px;
+  letter-spacing: 0.04em;
+  color: #1F3F68;
+  opacity: 0.8;
+  margin-top: 32px;
+  margin-bottom: 8px;
+}
+
+.contacts-content .send-us .send-us-form-item {
+  width: 100%;
+  opacity: 0.4;
+  border: 1px solid #356EAD;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
+  padding: 16px;
+  font-weight: 300;
+  line-height: 30px;
+  letter-spacing: 0.04em;
+  color: #1F3F68;
+  opacity: 0.2;
+}
+
+.contacts-content .send-us .textarea {
+  resize: none;
+}
+
+.contacts-content .send-us .send-us-form-btn {
+  width: 100%;
+  height: 72px;
+  background: #5A98D0;
+  -webkit-box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+          box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+  border-radius: 10px;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 500;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  margin-top: 72px;
 }
 /*# sourceMappingURL=main.css.map */
