--- a/css/main.scss
+++ b/css/main.scss
@@ -120,52 +120,6 @@ p{
     text-decoration: none;
 }
 
-.contacts-item-heading {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 30px;
-    letter-spacing: 0.04em;
-
-    color: #1F3F68;
-
-    text-transform: uppercase;   
-}
-
-.send-us{
-    box-shadow: 0 0 10px 5px rgb(221,221,221);
-    border-radius: 10px;
-    padding: 10px;
-}
-.send-us-form{
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 0.04em;
-}
-
-.send-us-form-items{
-    width: 428px;
-    opacity: 0.4;
-    border: 1px solid #356EAD;
-    box-sizing: border-box;
-    border-radius: 10px;
-    padding:16px;
-}
-
-.textarea{
-    resize: none;
-}
-
-.send-us-form-btn
-{
-    width: 428px;
-    height: 72px;
-    background: #5A98D0;
-    box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
-    border-radius: 10px;
-    text-transform: uppercase;   
-    color:#fff;
-}
 
 .footer-btn
 {
@@ -264,14 +218,7 @@ p{
 }
 
 
-.contacts-content{
-    display: flex;
-    justify-content: space-around;
-}
 
-.contacts-item{
-    width: 70%;
-}
 
 .footer{
     background: #316099;
@@ -504,6 +451,8 @@ p{
 }
 
 // страница контакты
+
+// шапка
 .wrapper-top-contacts{    
     
     .top-contacts{
@@ -545,4 +494,139 @@ p{
     }
 
 }
+
+// контент
+
+.contacts-content{
+    display: flex;
+    
+    justify-content: space-between;
+    max-height: 800px ;
+
+    margin-bottom: 72px;
+    .contacts {
+        max-width:300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding:56px 0;
+        flex-grow: 1;
+
+        .contacts-item{
+            list-style-position: inside;
+            .contacts-item-heading {
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 30px;
+                letter-spacing: 0.04em;
+                color: #1F3F68;
+                text-transform: uppercase;  
+                margin-bottom: 24px; 
+            }
+            .contacts-item-text{
+                font-weight: 300;
+                line-height: 26px;
+                letter-spacing: 0.04em;
+                color: #1F3F68;
+            }
+            .contacts-item-phone-li{
+                list-style-image: url(../img/phone_icon.svg);
+                margin-bottom: 16px;
+                
+            }
+            .contacts-item-www-li{
+                list-style-image: url(../img/www-icon.svg);
+                margin-bottom: 16px;
+            }
+            .contacts-item-email-li{
+                list-style-image: url(../img/email-icon.svg);
+            }
+            
+        }
+        
+    
+    
+    }
+
+    .send-us{
+        background: #FFFFFF;
+        box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
+        border-radius: 10px;
+        padding: 56px;
+        max-width:540px;
+        flex-grow: 1;
+        box-sizing: border-box;
+
+        // .send-us-form{
+            display:flex;
+            flex-direction: column;
+            justify-content: space-between;
+            .send-us-heading{
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 30px;
+                letter-spacing: 0.04em;
+                color: #1F3F68;
+                text-transform: uppercase;
+                margin-bottom: 48px;
+            }
+            
+            .input-caption{
+                line-height: 30px;
+                letter-spacing: 0.04em;
+                color: #1F3F68;
+                opacity: 0.8;
+                margin-top:32px;
+                margin-bottom: 8px;
+            }        
+
+            .send-us-form-item{
+                width: 100%;
+                opacity: 0.4;
+                border: 1px solid #356EAD;
+                box-sizing: border-box;
+                border-radius: 10px;
+                padding:16px;
+
+                font-weight: 300;
+                line-height: 30px;
+                letter-spacing: 0.04em;
+                color: #1F3F68;
+                opacity: 0.2;
+            }
+
+            
+            .textarea{
+                resize: none;
+            }
+
+            .send-us-form-btn{
+                width: 100%;
+                height: 72px;
+                background: #5A98D0;
+                box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+                border-radius: 10px;
+                text-transform: uppercase;   
+                color:#fff;
+
+                font-weight: 500;
+                line-height: 26px;
+                text-align: center;
+                letter-spacing: 0.04em;
+                margin-top: 72px;
+            }
+        // }
+
+    }
+
+}
+
+
+
+
+
+
+
+
+
 
