--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,7 @@ p {
 .footer {
   background: #316099;
   color: #ffffff;
-  margin-top: 120px;
+  margin-top: 96px;
   padding: 65px 0;
 }
 
@@ -664,5 +664,9 @@ p {
   text-align: center;
   letter-spacing: 0.04em;
   margin-top: 72px;
+}
+
+.find-us {
+  height: 480px;
 }
 /*# sourceMappingURL=main.css.map */
