--- a/css/main.scss
+++ b/css/main.scss
@@ -223,7 +223,7 @@ p{
 .footer{
     background: #316099;
     color:#ffffff;
-    margin-top:120px;
+    margin-top:96px;
     padding:65px 0;
 
 }
@@ -619,6 +619,10 @@ p{
 
     }
 
+}
+
+.find-us{
+    height: 480px;
 }
 
 
