--- a/css/main.css
+++ b/css/main.css
@@ -331,154 +331,6 @@ p {
   margin-top: 64px;
 }
 
-@media (max-width: 1024px) {
-  .container {
-    padding-left: 32px;
-    padding-right: 32px;
-  }
-  .index-banner-text {
-    background-position: right 280px;
-  }
-  .products-group {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding-bottom: 95px;
-  }
-  .product-box {
-    margin-bottom: 32px;
-  }
-  .project-text-double {
-    top: 20px;
-    left: 20px;
-  }
-  .footer-banner-text {
-    width: 340px;
-  }
-  .footer-button {
-    padding: 5px 8px;
-  }
-  .footer-contacts {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .footer {
-    padding-top: 47px;
-  }
-  .footer-banner {
-    padding: 0 80px 64px;
-  }
-}
-
-@media (max-width: 667px) {
-  .nav-bar {
-    padding-top: 24px;
-  }
-  .top-content {
-    min-height: 376px;
-    padding-bottom: 41px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
-  .index-banner-text {
-    padding-top: 36px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background-image: none;
-  }
-  .index-banner-heading {
-    text-align: center;
-    font-size: 32px;
-    line-height: 37px;
-    margin-bottom: 12px;
-    width: 100%;
-  }
-  .index-banner-text-p {
-    width: 100%;
-    text-align: center;
-  }
-  .top-button {
-    padding: 0 8px;
-  }
-  .products {
-    padding-top: 48px;
-  }
-  .services-heading {
-    font-size: 24px;
-  }
-  .product-box {
-    width: 100%;
-  }
-  .project-item-margin {
-    margin-right: 0;
-  }
-  .project-double {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin-top: 0;
-  }
-  .project-item {
-    margin-top: 16px;
-  }
-  .project-text-top {
-    top: 16px;
-    right: 16px;
-    font-size: 16px;
-  }
-  .project-text-double {
-    top: 16px;
-    font-size: 16px;
-    left: 16px;
-  }
-  .footer {
-    padding-top: 16px;
-    padding-bottom: 32px;
-  }
-  .footer-banner {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    padding: 0 0 48px;
-  }
-  .footer-banner-text {
-    margin-bottom: 40px;
-    width: 100%;
-    text-align: center;
-  }
-  .footer-heading {
-    font-size: 24px;
-    text-align: center;
-    width: 100%;
-  }
-  .footer-contacts {
-    margin-top: 32px;
-  }
-  .copyright {
-    margin-top: 37px;
-    text-align: center;
-  }
-}
-
 .wrapper-top-contacts .top-contacts {
   margin-bottom: 48px;
 }
@@ -532,7 +384,6 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  max-height: 800px;
   margin-bottom: 72px;
 }
 
@@ -668,5 +519,183 @@ p {
 
 .find-us {
   height: 480px;
+  max-width: 1140px;
+  margin: 0 auto;
+  min-width: 320px;
+}
+
+@media (max-width: 1024px) {
+  .container {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  .index-banner-text {
+    background-position: right 280px;
+  }
+  .products-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 95px;
+  }
+  .product-box {
+    margin-bottom: 32px;
+  }
+  .project-text-double {
+    top: 20px;
+    left: 20px;
+  }
+  .footer-banner-text {
+    width: 340px;
+  }
+  .footer-button {
+    padding: 5px 8px;
+  }
+  .footer-contacts {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer {
+    padding-top: 47px;
+  }
+  .footer-banner {
+    padding: 0 80px 64px;
+  }
+  .contacts-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contacts-content .contacts {
+    padding-bottom: 64px;
+  }
+  .contacts-content .contacts .contacts-item .contacts-item-phone-li {
+    list-style-image: url(../img/phone_icon.svg);
+    margin-bottom: 40px;
+  }
+  .contacts-content .contacts .address-item {
+    margin-top: 64px;
+    margin-bottom: 40px;
+  }
+  .contacts-content .send-us {
+    width: 520px;
+  }
+  .find-us {
+    height: 392px;
+    margin: 0;
+  }
+}
+
+@media (max-width: 667px) {
+  .nav-bar {
+    padding-top: 24px;
+  }
+  .top-content {
+    min-height: 376px;
+    padding-bottom: 41px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .index-banner-text {
+    padding-top: 36px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-image: none;
+  }
+  .index-banner-heading {
+    text-align: center;
+    font-size: 32px;
+    line-height: 37px;
+    margin-bottom: 12px;
+    width: 100%;
+  }
+  .index-banner-text-p {
+    width: 100%;
+    text-align: center;
+  }
+  .top-button {
+    padding: 0 8px;
+  }
+  .products {
+    padding-top: 48px;
+  }
+  .services-heading {
+    font-size: 24px;
+  }
+  .product-box {
+    width: 100%;
+  }
+  .project-item-margin {
+    margin-right: 0;
+  }
+  .project-double {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 0;
+  }
+  .project-item {
+    margin-top: 16px;
+  }
+  .project-text-top {
+    top: 16px;
+    right: 16px;
+    font-size: 16px;
+  }
+  .project-text-double {
+    top: 16px;
+    font-size: 16px;
+    left: 16px;
+  }
+  .footer {
+    padding-top: 16px;
+    padding-bottom: 32px;
+  }
+  .footer-banner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 0 48px;
+  }
+  .footer-banner-text {
+    margin-bottom: 40px;
+    width: 100%;
+    text-align: center;
+  }
+  .footer-heading {
+    font-size: 24px;
+    text-align: center;
+    width: 100%;
+  }
+  .footer-contacts {
+    margin-top: 32px;
+  }
+  .copyright {
+    margin-top: 37px;
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=main.css.map */
